# Hatsune-Miku-Bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BotAudioFiles.db  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt  youtube_downloader.py  youtube_downloader_dlp.py
.github/workflows/: deploy.yml  test.yml
audio_utils/: audio_class.py  audio_handler.py  bot_audio_functions.py  guild_playback_state.py  guildstate_controller.py  music_queue_classes.py
botconfig/: bot.py  loggerConfig.py
botextras/: audioClass.py  audio_handler.py  bot_events.py  bot_funcs_ext.py  config.py  constants.py  loadenv_values.py  msgs_embeds.py  rewrite_downloader_dlp.py  youtube_downloader_dlp.py
cogs/: debugger.py  musicplayer.py  rewrite.py  rewritemusicplayer.py  utilcommands.py
docs/: CHANGELOG.md  TODO.md  bot_music_player.md
hatsune_miku_bot/: main.py
hatsune_miku_bot/api_test/: api_helpers.py  api_test.py
hatsune_miku_bot/audio_utils/: audio_class.py  audio_handler.py  bot_audio_functions.py  guildstate_controller.py  music_queue_classes.py
hatsune_miku_bot/botconfig/: bot.py  loggerConfig.py
hatsune_miku_bot/botextras/: bot_events.py  bot_funcs_ext.py  config.py  constants.py  loadenv_values.py
hatsune_miku_bot/cogs/: debugger.py  musicplayer.py  utilcommands.py
hatsune_miku_bot/db_stuff/: db_logic.py  db_schema.py
scripts/: bash_botsetup.sh  bashrun_bot.sh  windows_botsetup.ps1  winrun_bot.ps1
src/bot_status/api_test/: api_helpers.py  api_test.py
src/bot_status/db_stuff/: db_logic.py  db_schema.py  main_db_class.py
src/hatsune_miku_bot/: __main__.py  main.py
src/hatsune_miku_bot/api_test/: api_helpers.py  api_test.py
src/hatsune_miku_bot/audio/: audio_resolver.py  guild_state_controller.py  playback_helpers.py  queue_view.py  song_cache.py  song_playlist_classes.py
src/hatsune_miku_bot/audio_utils/: audio_class.py  audio_handler.py  audio_rewrite.py  bot_audio_functions.py  guildstate_controller.py  guildstate_controller_rewrite.py  music_queue_classes.py
src/hatsune_miku_bot/bot_config/: client.py  constants.py  env_loader.py  logging_config.py  paths.py
tests/: __init__.py  _bootstrap.py  conftest.py  helpers.py  test_audio_handler.py  test_audio_resolver.py  test_bot_config.py  test_botconfig.py  test_cogs.py  test_constants.py  test_db_logic.py  test_guild_state_controller.py  test_guildstate_controller.py  test_main.py  test_musicplayer.py  test_playback_and_discord_helpers.py  test_queue_view.py  test_song_playlist_classes.py
(+21 files in other folders)
