[project]
name = "hatsune-miku-bot"
version = "0.1.0"
description = "Self-hosted Discord music bot built with discord.py, yt-dlp, and ffmpeg."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite",
    "discord.py[voice]",
    "fastapi",
    "python-dotenv",
    "requests",
    "uvicorn[standard]",
    "yt-dlp",
    "yt-dlp-ejs",
]

[project.scripts]
hatsune-miku-bot = "hatsune_miku_bot.main:run"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
