[project]
name = "hatsune-miku-bot"
version = "0.1.0"
description = "Self-hosted Discord music bot built with discord.py, yt-dlp, and ffmpeg."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiosqlite",
  "discord.py[voice]",
  "fastapi",
  "python-dotenv",
  "uvicorn[standard]",
  "yt-dlp",
  "yt-dlp-ejs",
]

[project.scripts]
hatsune-miku-bot = "hatsune_miku_bot.main:run"

[dependency-groups]
dev = ["pytest", "types-yt-dlp>=2026.3.17.20260605"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
